Detail page working

--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
-    "@ng-icons/core": "^25.6.1",
-    "@ng-icons/heroicons": "^25.6.1",
-    "@ng-icons/octicons": "^25.6.1",
+    "@dimaslz/ng-heroicons": "^1.16.0",
     "axios": "^1.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
