Added backdrop image

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@dimaslz/ng-heroicons": "^1.16.0",
+    "@types/body-scroll-lock": "^3.1.2",
     "axios": "^1.6.0",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
